--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 /* aside */
 
-
 .aside {
   display: flex;
 }
@@ -70,7 +69,7 @@
   background: #141414;
 }
 
-.mainWrap {
+main {
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -79,7 +78,7 @@
   height: 1715px;
 }
 
-.header {
+header {
   display: flex;
   max-width: 1216px;
   width: 100%;
@@ -370,8 +369,8 @@ h3 {
 }
 
 .inside span {
-    color: #797979;
-font-size: 14px;
-font-weight: 400;
-line-height: 18px;
+  color: #797979;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
 }
