--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@
   line-height: 24px;
 }
 
+body {
+  background-color: #141414;
+}
+
 /* header */
 
 .wrap {
@@ -66,7 +70,6 @@
   max-width: 1216px;
   width: 100%;
   height: 1715px;
-  background: #141414;
 }
 
 main {
